# Training-and-Evaluation

./: .gitignore  pyproject.toml  requirements.txt
src/: launch.py  main.py  training.py  workspace.py
src/TrainingAndEvaluation/: launch.py  main.py  workspace.py
src/TrainingAndEvaluation/stage/: __init__.py  dataset.py  evaluation.py  labels.py  singletons.py  training.py
src/TrainingAndEvaluation/stage/datasets/: setup_of_dataset.py
src/stage/: __init__.py  dataset.py  labels.py  singletons.py  training.py
src/test/: test_generate_dataset.py
