[project]
name = "Training-and-Evaluation_Designermadsen"
version = "0.0.1"
authors = [
  { name="Kent Madsen", email="kent.vejrup.madsen@designermadsen.dk" },
]
description = ""
readme = "Readme.md"
requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/KentVejrupMadsen/Training-and-Evaluation"
Issues = "https://github.com/KentVejrupMadsen/Training-and-Evaluation/issues"